2014-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* char_routines.c, ligkern_routines.c, omfonts.c,
	param_routines.c, parse_ofm.c: Allow char codes 10000..10FFFF
	from Supplementary Unicode Planes.

2014-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop Automake conditional OMFONTS.
	* ofonts.test, overbmp.test, tests/ofont*, tests/inbmp.opl,
	tests/overbmp.* (new): Shell scripts and data for new tests.

2013-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* omfonts.c (main): Use make_suffix() for implied ofm_name.
	* selectfont.test: Add test for 'ovp2ovf foo.ovp bar.ovf'.
	* Makefile.am (DISTCLEANFILES): Additional files.
	Mail from TANAKA Takuji <KXD02663@nifty.ne.jp>, 27 Nov 2013.

2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* omfonts.c (main): Use kpse_program_basename().

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pl-lexer.l: Add '#include <kpathsea/c-memstr.h>' for strlen().

2013-01-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Allow subdir-objects.

2012-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* char_routines.c, ligkern_routines.c:
	Drop unused variables (gcc-4.6 warning).

2012-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* omfonts.c (PROG_IS): Compare program name case insensistively.
	(from W32TeX).

2012-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pl-parser.[ch]: Regenerate with bison 2.5.1.

2012-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pl-lexer.l: Added the never-interactive option to prevent
	flex from creating a problematic prototype for isatty().
	#include <kpathsea/lib.h> and drop prototype for xstrdup().

2012-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pl-lexer.l: 'Correctly' scan real numbers for scan_fix().
	Reported by Tanaka Takuji <KXD02663@nifty.ne.jp>.

	* realnum.test, tests/realnum.opl, tests/realnum.out (new):
	Shell script and data for a new test.
	* Makefile.am: Add the new test.

2012-01-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
